# generic-logger

./: .gitmodules  meson.build
include/: assert.h  logger.h
src/: logger.c  meson.build
tests/: meson.build  simple_test.c
